php data files created, printed characters sectionm added first layout rules

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,7 +4,8 @@
 @import "partials/header";
 @import "partials/footer";
 
-body {
-    font-size: larger;
+
+.container {
+    padding: 0 200px 0 200px;
 }
 
