--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,25 @@
-body {
-  font-size: larger;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+header {
+  display: flex;
+  text-align: center;
+}
+
+header ul {
+  display: inline-block;
+  display: flex;
+}
+
+header ul li {
+  list-style-type: none;
+  padding: 20px;
+}
+
+.container {
+  padding: 0 200px 0 200px;
 }
 
