--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,7 +3,7 @@
 @import "partials/content";
 @import "partials/header";
 @import "partials/footer";
-
+@import "partials/comic";
 
 .container {
     padding: 0 200px 0 200px;
