--- a/resources/sass/partials/_content.scss
+++ b/resources/sass/partials/_content.scss
@@ -28,7 +28,11 @@ h1 {
         img {
             width: 150px;
             height: 150px;
-            object-fit: cover;
+            object-fit: contain;
+        }
+
+        a {
+            text-decoration: none;
         }
 }
 
