--- a/resources/sass/partials/_content.scss
+++ b/resources/sass/partials/_content.scss
@@ -25,7 +25,7 @@ h1 {
     overflow: hidden;
     //word-wrap: break-word; 
 
-        img {
+        .img {
             width: 150px;
             height: 150px;
             object-fit: contain;
