--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -15,7 +15,7 @@ header {
 
         li {
             list-style-type: none;
-            padding: 20px;
+            padding: 15px;
         }
     }
 
@@ -23,25 +23,32 @@ header {
         text-decoration: none;
         color: $listItemsColor;
         font-family: $bodyFont;
+        padding-bottom: 45px;
+
         &:active {
             color: $dcLogoColor;
-
-            .link_line_box {
-                height: 100%;
-                display: flex;
-                align-items: center;
-                border-bottom: 5px solid $dcLogoColor;
+            border-bottom: 5px solid $dcLogoColor;
             }
-        }
     }
-}
 
-.search_box {
-    border-bottom: 2px solid $dcLogoColor;
-    width: 100px;
-    font-family: $bodyFont;
-}
+    .search_box {
+        border-bottom: 2px solid $dcLogoColor;
+        width: 100px;
+        font-family: $comicBoxFont;
+        display: inline-block;
+        text-align: end;
+        margin-left: 40px;
 
+        p {
+            font-size: 13px;
+            font-weight: bold;
+        }
+    
+    }
+
+
+
+    }
 
 .mark_box {
     height: 30px;
@@ -59,4 +66,6 @@ header {
         .mark {
             margin-right: 30px;
         }
-}
+    }
+        
+
