--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,11 +35,10 @@ h1 {
   margin: 10px;
   overflow: hidden;
 }
-.card_element .img {
+.card_element .card_img_container {
   width: 150px;
   height: 150px;
-  -o-object-fit: contain;
-     object-fit: contain;
+  margin: auto;
 }
 .card_element a {
   text-decoration: none;
